--- a/exercises/09-formatting-Text/index.html
+++ b/exercises/09-formatting-Text/index.html
@@ -11,7 +11,15 @@
 		</style>
 	</head>
 	<body>
-		<!-- your code here -->
-		
+		<h1>This will be your headding</h1>
+		<p>Did you know most politics are...</p>
+		<p>Said Someone Credible</p>
+		<blockquote>I am always right<br />-TheWife</blockquote>
+		<p>After all new generations have something in common with older ones</p>
+		<ul>
+			<li>Do not like long texts</li>
+			<li>Liked not are long texts</li>
+			<li>Long texts are not liked</li>
+		</ul>
 	</body>
 </html>
